@startuml

skinparam titleFontSize 25
title <u>US 240 - Domain classes</u>

hide methods
skinparam classAttributeIconSize 0

'Passageway aggregate
package "<<aggregate>> Passageway" {
    entity Passageway <<entity>> <<root>>
    class PassagewayCode <<(V, #FF8B40) value object>>
}

'Building aggregate
package "<<aggregate>> Building" {
    entity Building <<entity>> <<root>>
    class Code <<(V, #FF8B40) value object>>

    entity Floor <<entity>> {
        number
    }
}

Building -up-> Code

Passageway --> PassagewayCode

Building "1" -- "*" Floor : has >

Passageway "1" -- "*" Floor : through >
Passageway "*" -- "*" Building : has >

@enduml
